# jukebox-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  jukebox.db
binaries/: jukebox-linux-64
src/: lib.rs  main.rs  main.rs.bk
